[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "execg"
version = "0.1.0"
description = "Explainable AI library for ECG deep learning models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.7.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "captum",
    "pandas",
    "requests",
    "tqdm",
    "gdown",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["execg*"]
